# open_ai_api_with_knowledge_base

./: .env  README.md  main.py  pyproject.toml
rag_api/: app.py  llm.py  models.py  utils.py
